@@ -16,7 +16,6 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.json.JsonPatch;
 import javax.validation.Valid;
 import javax.validation.constraints.Max;
@@ -48,6 +47,7 @@ import org.openmetadata.schema.service.configuration.elasticsearch.ElasticSearch
 import org.openmetadata.schema.services.connections.metadata.ComponentConfig;
 import org.openmetadata.schema.services.connections.metadata.ElasticsSearch;
 import org.openmetadata.schema.services.connections.metadata.OpenMetadataConnection;
+import org.openmetadata.schema.type.ChangeEvent;
 import org.openmetadata.schema.type.EntityHistory;
 import org.openmetadata.schema.type.Include;
 import org.openmetadata.schema.type.MetadataOperation;
@@ -75,9 +75,10 @@ import org.openmetadata.service.util.ResultList;
 @Collection(name = "metadataServices", order = 8) // init before IngestionPipelineService
 public class MetadataServiceResource
     extends ServiceEntityResource<MetadataService, MetadataServiceRepository, MetadataConnection> {
+  private final MetadataServiceMapper mapper = new MetadataServiceMapper();
   public static final String OPENMETADATA_SERVICE = "OpenMetadata";
   public static final String COLLECTION_PATH = "v1/services/metadataServices/";
-  public static final String FIELDS = "pipelines,owners,tags";
+  public static final String FIELDS = "pipelines,owners,tags,followers";
 
   @Override
   public void initialize(OpenMetadataApplicationConfig config) throws IOException {
@@ -105,7 +106,7 @@ public class MetadataServiceResource
         LOG.error("[MetadataService] Missing Elastic Search Config.");
       }
       repository.setFullyQualifiedName(openMetadataService);
-      repository.createOrUpdate(null, openMetadataService);
+      repository.createOrUpdate(null, openMetadataService, ADMIN_USER_NAME);
     } else {
       throw new IOException("Failed to initialize OpenMetadata Service.");
     }
@@ -258,6 +259,69 @@ public class MetadataServiceResource
   }
 
   @PUT
+  @Path("/{id}/followers")
+  @Operation(
+      operationId = "addFollowerToMetadataService",
+      summary = "Add a follower",
+      description = "Add a user identified by `userId` as followed of this Metadata service",
+      responses = {
+        @ApiResponse(
+            responseCode = "200",
+            description = "OK",
+            content =
+                @Content(
+                    mediaType = "application/json",
+                    schema = @Schema(implementation = ChangeEvent.class))),
+        @ApiResponse(
+            responseCode = "404",
+            description = "Metadata Service for instance {id} is not found")
+      })
+  public Response addFollower(
+      @Context UriInfo uriInfo,
+      @Context SecurityContext securityContext,
+      @Parameter(description = "Id of the Metadata Service", schema = @Schema(type = "UUID"))
+          @PathParam("id")
+          UUID id,
+      @Parameter(
+              description = "Id of the user to be added as follower",
+              schema = @Schema(type = "string"))
+          UUID userId) {
+    return repository
+        .addFollower(securityContext.getUserPrincipal().getName(), id, userId)
+        .toResponse();
+  }
+
+  @DELETE
+  @Path("/{id}/followers/{userId}")
+  @Operation(
+      operationId = "deleteFollower",
+      summary = "Remove a follower",
+      description = "Remove the user identified `userId` as a follower of the entity.",
+      responses = {
+        @ApiResponse(
+            responseCode = "200",
+            description = "OK",
+            content =
+                @Content(
+                    mediaType = "application/json",
+                    schema = @Schema(implementation = ChangeEvent.class)))
+      })
+  public Response deleteFollower(
+      @Context UriInfo uriInfo,
+      @Context SecurityContext securityContext,
+      @Parameter(description = "Id of the Entity", schema = @Schema(type = "UUID")) @PathParam("id")
+          UUID id,
+      @Parameter(
+              description = "Id of the user being removed as follower",
+              schema = @Schema(type = "string"))
+          @PathParam("userId")
+          String userId) {
+    return repository
+        .deleteFollower(securityContext.getUserPrincipal().getName(), id, UUID.fromString(userId))
+        .toResponse();
+  }
+
+  @PUT
   @Path("/{id}/testConnectionResult")
   @Operation(
       operationId = "addTestConnectionResult",
@@ -320,7 +384,7 @@ public class MetadataServiceResource
                     return json;
                   }
                 })
-            .collect(Collectors.toList());
+            .toList();
     entityHistory.setVersions(versions);
     return entityHistory;
   }
@@ -378,7 +442,7 @@ public class MetadataServiceResource
       @Context SecurityContext securityContext,
       @Valid CreateMetadataService create) {
     MetadataService service =
-        getMetadataService(create, securityContext.getUserPrincipal().getName());
+        mapper.createToEntity(create, securityContext.getUserPrincipal().getName());
     Response response = create(uriInfo, securityContext, service);
     decryptOrNullify(securityContext, (MetadataService) response.getEntity());
     return response;
@@ -404,7 +468,7 @@ public class MetadataServiceResource
       @Context SecurityContext securityContext,
       @Valid CreateMetadataService update) {
     MetadataService service =
-        getMetadataService(update, securityContext.getUserPrincipal().getName());
+        mapper.createToEntity(update, securityContext.getUserPrincipal().getName());
     Response response = createOrUpdate(uriInfo, securityContext, unmask(service));
     decryptOrNullify(securityContext, (MetadataService) response.getEntity());
     return response;
@@ -500,6 +564,37 @@ public class MetadataServiceResource
   }
 
   @DELETE
+  @Path("/async/{id}")
+  @Operation(
+      operationId = "deleteMetadataServiceAsync",
+      summary = "Asynchronously delete a metadata service by Id",
+      description =
+          "Asynchronously delete a metadata services. If some service belong the service, it can't be deleted.",
+      responses = {
+        @ApiResponse(responseCode = "200", description = "OK"),
+        @ApiResponse(
+            responseCode = "404",
+            description = "MetadataService service for instance {id} is not found")
+      })
+  public Response deleteByIdAsync(
+      @Context UriInfo uriInfo,
+      @Context SecurityContext securityContext,
+      @Parameter(
+              description = "Recursively delete this entity and it's children. (Default `false`)")
+          @DefaultValue("false")
+          @QueryParam("recursive")
+          boolean recursive,
+      @Parameter(description = "Hard delete the entity. (Default = `false`)")
+          @QueryParam("hardDelete")
+          @DefaultValue("false")
+          boolean hardDelete,
+      @Parameter(description = "Id of the metadata service", schema = @Schema(type = "UUID"))
+          @PathParam("id")
+          UUID id) {
+    return deleteByIdAsync(uriInfo, securityContext, id, recursive, hardDelete);
+  }
+
+  @DELETE
   @Path("/name/{name}")
   @Operation(
       operationId = "deleteMetadataServiceByName",
@@ -550,13 +645,6 @@ public class MetadataServiceResource
       @Context SecurityContext securityContext,
       @Valid RestoreEntity restore) {
     return restoreEntity(uriInfo, securityContext, restore.getId());
-  }
-
-  private MetadataService getMetadataService(CreateMetadataService create, String user) {
-    return repository
-        .copy(new MetadataService(), create, user)
-        .withServiceType(create.getServiceType())
-        .withConnection(create.getConnection());
   }
 
   @Override
